# Vaultlocal

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/crypto/: cipher.rs  constants.rs  kdf.rs
src/db/: connection.rs  header.rs  meta.rs  schema.rs  vault.rs
src/error/: mod.rs
src/secure_mem/: types.rs
src/util/: encoding.rs
tests/: crypto_tests.rs  integration.rs  vault_tests.rs
